--- a/android-local-storage-list-views/app/build.gradle
+++ b/android-local-storage-list-views/app/build.gradle
@@ -16,20 +16,42 @@ android {
       proguardFiles getDefaultProguardFile( 'proguard-android-optimize.txt' ), 'proguard-rules.pro'
     }
   }
+  compileOptions {
+    sourceCompatibility 1.8
+    targetCompatibility 1.8
+  }
 }
 
 dependencies {
-  implementation fileTree( dir: 'libs', include: ['*.jar'] )
-  implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-  implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-  implementation 'com.google.android.material:material:1.0.0-beta01'
+  implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
+
+  // Dependencies for working with Architecture components
+  // You'll probably have to update the version numbers in build.gradle (Project)
+
+  // Room components
+  implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+  annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
+  androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+
+  // Lifecycle components
+  implementation "androidx.lifecycle:lifecycle-viewmodel:$rootProject.lifecycleVersion"
+  implementation "androidx.lifecycle:lifecycle-livedata:$rootProject.lifecycleVersion"
+  implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycleVersion"
+
+  // UI
+  implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
+  implementation "com.google.android.material:material:$rootProject.materialVersion"
 
   //Retrofit
-  implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-  implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+  implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
+  implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
 
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+  // Testing
+  testImplementation "junit:junit:$rootProject.junitVersion"
+  androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
+  androidTestImplementation ("androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
+    exclude group: 'com.android.support', module: 'support-annotations'
+  })
+  androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
+
 }
